--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "@ngrx/effects": "^13.2.0",
+    "@ngrx/entity": "^13.2.0",
+    "@ngrx/router-store": "^13.2.0",
     "@ngrx/store": "^13.2.0",
     "bootstrap": "^5.2.0-beta1",
     "rxjs": "~7.5.0",
