--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ngrx/entity": "^13.2.0",
     "@ngrx/router-store": "^13.2.0",
     "@ngrx/store": "^13.2.0",
+    "@ngrx/store-devtools": "^13.2.0",
     "bootstrap": "^5.2.0-beta1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
